--- a/colibre/auto_plotter/cold_gas_relations.yml
+++ b/colibre/auto_plotter/cold_gas_relations.yml
@@ -24,7 +24,7 @@ stellar_mass_molecular_to_neutral_fraction_30:
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Molecular to Neutral Gas Fraction (30 kpc Stellar Mass)
-    caption: All galaxies are included in the median line.
+    caption: All galaxies are included in the median line. Gas fraction is H2 mass over HI + H_2 mass in a 30 kpc aperture.
     section: Cold Gas Relations
     show_on_webpage: false
 
@@ -54,7 +54,7 @@ stellar_mass_molecular_to_neutral_fraction_100:
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Molecular to Neutral Gas Fraction (100 kpc Stellar Mass)
-    caption: All galaxies are included in the median line.
+    caption: All galaxies are included in the median line. Gas fraction is H2 mass over HI + H_2 mass in a 100 kpc aperture.
     section: Cold Gas Relations
 
 stellar_mass_neutral_to_stellar_fraction_30:
@@ -83,7 +83,7 @@ stellar_mass_neutral_to_stellar_fraction_30:
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Neutral To Stellar Gas Fraction (30 kpc Stellar Mass)
-    caption: All galaxies are included in the median line.
+    caption: All galaxies are included in the median line. Gas fraction is HI + H_2 mass divided by stellar mass in a 30 kpc aperture.
     section: Cold Gas Relations
     show_on_webpage: false
 
@@ -113,7 +113,7 @@ stellar_mass_neutral_to_stellar_fraction_100:
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Neutral To Stellar Gas Fraction (100 kpc Stellar Mass)
-    caption: All galaxies are included in the median line.
+    caption: All galaxies are included in the median line. Gas fraction is HI + H_2 mass divided by stellar mass in a 100 kpc aperture.
     section: Cold Gas Relations
 
 stellar_mass_molecular_to_stellar_plus_molecular_fraction_30:
@@ -142,7 +142,7 @@ stellar_mass_molecular_to_stellar_plus_molecular_fraction_30:
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Molecular Gas To Molecular Plus Stellar Fraction (30 kpc Stellar Mass)
-    caption: All galaxies are included in the median line.
+    caption: All galaxies are included in the median line. Gas fraction is H2 mass divided by H_2 mass + stellar mass in a 30 kpc aperture.
     section: Cold Gas Relations
     show_on_webpage: false
 
@@ -172,7 +172,7 @@ stellar_mass_molecular_to_stellar_plus_molecular_fraction_100:
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Molecular Gas To Molecular Plus Stellar Fraction (100 kpc Stellar Mass)
-    caption: All galaxies are included in the median line.
+    caption: All galaxies are included in the median line. Gas fraction is H2 mass divided by H_2 mass + stellar mass in a 100 kpc aperture.
     section: Cold Gas Relations
 
 stellar_mass_H2_mass_30:
