address comments (fix titles, line bounds, bin widths)

--- a/colibre/auto_plotter/gas_mass_functions.yml
+++ b/colibre/auto_plotter/gas_mass_functions.yml
@@ -3,7 +3,7 @@ gas_HI_mass_function:
   legend_loc: "lower left"
   number_of_bins: 25
   x:
-    quantity: "derived_quantities.gas_HI_mass_Msun"
+    quantity: "derived_quantities.gas_HI_mass"
     units: Solar_Mass
     start: 1e6
     end: 1e11
@@ -25,7 +25,7 @@ adaptive_gas_HI_mass_function:
   legend_loc: "lower left"
   number_of_bins: 25
   x:
-    quantity: "derived_quantities.gas_HI_mass_Msun"
+    quantity: "derived_quantities.gas_HI_mass"
     units: Solar_Mass
     start: 1e6
     end: 1e11
@@ -47,7 +47,7 @@ gas_H2_mass_function:
   legend_loc: "lower left"
   number_of_bins: 25
   x:
-    quantity: "derived_quantities.gas_H2_plus_He_mass_Msun"
+    quantity: "derived_quantities.gas_H2_plus_He_mass"
     units: Solar_Mass
     start: 1e6
     end: 1e11
@@ -67,7 +67,7 @@ adaptive_gas_H2_mass_function:
   legend_loc: "lower left"
   number_of_bins: 25
   x:
-    quantity: "derived_quantities.gas_H2_mass_Msun"
+    quantity: "derived_quantities.gas_H2_mass"
     units: Solar_Mass
     start: 1e6
     end: 1e11
