--- a/colibre/auto_plotter/stellar_mass_halo_mass.yml
+++ b/colibre/auto_plotter/stellar_mass_halo_mass.yml
@@ -1,135 +1,3 @@
-stellar_mass_halo_mass_M200_all_100:
-  type: "scatter"
-  legend_loc: "upper left"
-  x:
-    quantity: "masses.mass_200crit"
-    units: Solar_Mass
-    start: 1e8
-    end: 1e13
-  y:
-    quantity: "apertures.mass_star_100_kpc"
-    units: Solar_Mass
-    start: 9e3
-    end: 1e12
-  median:
-    plot: true
-    log: true
-    adaptive: true
-    number_of_bins: 25
-    start:
-      value: 1e8
-      units: Solar_Mass
-    end:
-      value: 1e13
-      units: Solar_Mass
-  metadata:
-    title: Stellar Mass-Halo Mass relation (100 kpc aperture, $M_{200}$)
-    caption: Includes all haloes, including subhaloes.
-    section: Stellar Mass-Halo Mass
-  observational_data:
-    - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
-    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200.hdf5
-
-stellar_mass_halo_mass_MBN98_all_100:
-  type: "scatter"
-  legend_loc: "upper left"
-  x:
-    quantity: "masses.mass_bn98"
-    units: Solar_Mass
-    start: 1e8
-    end: 1e13
-  y:
-    quantity: "apertures.mass_star_100_kpc"
-    units: Solar_Mass
-    start: 9e3
-    end: 1e12
-  median:
-    plot: true
-    log: true
-    adaptive: true
-    number_of_bins: 25
-    start:
-      value: 1e8
-      units: Solar_Mass
-    end:
-      value: 1e13
-      units: Solar_Mass
-  metadata:
-    title: Stellar Mass-Halo Mass relation (100 kpc aperture, $M_{\rm BN98}$)
-    caption: Includes all haloes, including subhaloes.
-    section: Stellar Mass-Halo Mass
-  observational_data:
-    - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
-    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
-
-stellar_mass_halo_mass_M200_centrals_100:
-  type: "scatter"
-  select_structure_type: 10
-  comment: "Centrals only"
-  legend_loc: "upper left"
-  x:
-    quantity: "masses.mass_200crit"
-    units: Solar_Mass
-    start: 1e8
-    end: 1e13
-  y:
-    quantity: "apertures.mass_star_100_kpc"
-    units: Solar_Mass
-    start: 9e3
-    end: 1e12
-  median:
-    plot: true
-    log: true
-    adaptive: true
-    number_of_bins: 25
-    start:
-      value: 1e8
-      units: Solar_Mass
-    end:
-      value: 1e13
-      units: Solar_Mass
-  metadata:
-    title: Stellar Mass-Halo Mass relation (100 kpc aperture, $M_{200}$, centrals only)
-    caption: Includes only central haloes.
-    section: Stellar Mass-Halo Mass
-  observational_data:
-    - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
-    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200.hdf5
-
-stellar_mass_halo_mass_MBN98_centrals_100:
-  type: "scatter"
-  select_structure_type: 10
-  comment: "Centrals only"
-  legend_loc: "upper left"
-  x:
-    quantity: "masses.mass_bn98"
-    units: Solar_Mass
-    start: 1e8
-    end: 1e13
-  y:
-    quantity: "apertures.mass_star_100_kpc"
-    units: Solar_Mass
-    start: 9e3
-    end: 1e12
-  median:
-    plot: true
-    log: true
-    adaptive: true
-    number_of_bins: 25
-    start:
-      value: 1e8
-      units: Solar_Mass
-    end:
-      value: 1e13
-      units: Solar_Mass
-  metadata:
-    title: Stellar Mass-Halo Mass relation (100 kpc aperture, $M_{\rm BN98}$, centrals only)
-    caption: Includes only central haloes.
-    section: Stellar Mass-Halo Mass
-  observational_data:
-    - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
-    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
-      
 stellar_mass_halo_mass_M200_centrals_ratio_100:
   type: "scatter"
   select_structure_type: 10
@@ -157,7 +25,7 @@ stellar_mass_halo_mass_M200_centrals_ratio_100:
       value: 1e13
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, $M_{200}$, centrals only)
+    title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, $M_{200,crit}$, centrals only)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
   observational_data:
@@ -225,7 +93,7 @@ stellar_mass_halo_mass_M200_centrals_ratio_stellar_100:
       value: 1e12
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, $M_{200}$, centrals only, stellar x-axis)
+    title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, $M_{200,crit}$, centrals only, stellar x-axis)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
   observational_data:
@@ -266,16 +134,16 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_100:
     - filename: GalaxyStellarMassHaloMass/Behroozi2019RatioStellar.hdf5
     - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98_RatioStellar.hdf5
 
-stellar_mass_halo_mass_M200_all_30:
+stellar_mass_halo_mass_M200_all_100:
   type: "scatter"
   legend_loc: "upper left"
   x:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
-    start: 1e8
+    start: 9e3
     end: 1e13
   y:
-    quantity: "apertures.mass_star_30_kpc"
+    quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
     start: 9e3
     end: 1e12
@@ -285,21 +153,52 @@ stellar_mass_halo_mass_M200_all_30:
     adaptive: true
     number_of_bins: 25
     start:
-      value: 1e8
+      value: 9e3
       units: Solar_Mass
     end:
       value: 1e13
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Halo Mass relation (30 kpc aperture, $M_{200}$)
+    title: Stellar Mass-Halo Mass relation (100 kpc aperture, $M_{200,crit}$)
     caption: Includes all haloes, including subhaloes.
     section: Stellar Mass-Halo Mass
-    show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
     - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200.hdf5
 
-stellar_mass_halo_mass_M200_centrals_30:
+stellar_mass_halo_mass_MBN98_all_100:
+  type: "scatter"
+  legend_loc: "upper left"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 9e3
+    end: 1e13
+  y:
+    quantity: "apertures.mass_star_100_kpc"
+    units: Solar_Mass
+    start: 9e3
+    end: 1e12
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 9e3
+      units: Solar_Mass
+    end:
+      value: 1e13
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (100 kpc aperture, $M_{\rm BN98}$)
+    caption: Includes all haloes, including subhaloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
+
+stellar_mass_halo_mass_M200_centrals_100:
   type: "scatter"
   select_structure_type: 10
   comment: "Centrals only"
@@ -307,10 +206,10 @@ stellar_mass_halo_mass_M200_centrals_30:
   x:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
-    start: 1e8
+    start: 9e3
     end: 1e13
   y:
-    quantity: "apertures.mass_star_30_kpc"
+    quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
     start: 9e3
     end: 1e12
@@ -320,19 +219,54 @@ stellar_mass_halo_mass_M200_centrals_30:
     adaptive: true
     number_of_bins: 25
     start:
-      value: 1e8
+      value: 9e3
       units: Solar_Mass
     end:
       value: 1e13
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Halo Mass relation (30 kpc aperture, $M_{200}$, centrals only)
+    title: Stellar Mass-Halo Mass relation (100 kpc aperture, $M_{200,crit}$, centrals only)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
     show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
     - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200.hdf5
+
+stellar_mass_halo_mass_MBN98_centrals_100:
+  type: "scatter"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 9e3
+    end: 1e13
+  y:
+    quantity: "apertures.mass_star_100_kpc"
+    units: Solar_Mass
+    start: 9e3
+    end: 1e12
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 9e3
+      units: Solar_Mass
+    end:
+      value: 1e13
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (100 kpc aperture, $M_{\rm BN98}$, centrals only)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+    show_on_webpage: false
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
 
 stellar_mass_halo_mass_M200_centrals_ratio_30:
   type: "scatter"
@@ -361,7 +295,7 @@ stellar_mass_halo_mass_M200_centrals_ratio_30:
       value: 1e13
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Halo Mass relation (ratio, 30 kpc aperture, $M_{200}$, centrals only)
+    title: Stellar Mass-Halo Mass relation (ratio, 30 kpc aperture, $M_{200,crit}$, centrals only)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
     show_on_webpage: false
@@ -396,10 +330,78 @@ stellar_mass_halo_mass_M200_centrals_ratio_stellar_30:
       value: 1e12
       units: Solar_Mass
   metadata:
-    title: Stellar Mass-Halo Mass relation (ratio, 30 kpc aperture, $M_{200}$, centrals only, stellar x-axis)
+    title: Stellar Mass-Halo Mass relation (ratio, 30 kpc aperture, $M_{200,crit}$, centrals only, stellar x-axis)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
     show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassHaloMass/Moster2013RatioStellar.hdf5
     - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200_RatioStellar.hdf5
+
+stellar_mass_halo_mass_M200_all_30:
+  type: "scatter"
+  legend_loc: "upper left"
+  x:
+    quantity: "masses.mass_200crit"
+    units: Solar_Mass
+    start: 9e3
+    end: 1e13
+  y:
+    quantity: "apertures.mass_star_30_kpc"
+    units: Solar_Mass
+    start: 9e3
+    end: 1e12
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 9e3
+      units: Solar_Mass
+    end:
+      value: 1e13
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (30 kpc aperture, $M_{200,crit}$)
+    caption: Includes all haloes, including subhaloes.
+    section: Stellar Mass-Halo Mass
+    show_on_webpage: false
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200.hdf5
+
+stellar_mass_halo_mass_M200_centrals_30:
+  type: "scatter"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "masses.mass_200crit"
+    units: Solar_Mass
+    start: 9e3
+    end: 1e13
+  y:
+    quantity: "apertures.mass_star_30_kpc"
+    units: Solar_Mass
+    start: 9e3
+    end: 1e12
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 9e3
+      units: Solar_Mass
+    end:
+      value: 1e13
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (30 kpc aperture, $M_{200,crit}$, centrals only)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+    show_on_webpage: false
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_M200.hdf5
