Also add the new plot to the XL pipeline

--- a/eagle-xl/config.yml
+++ b/eagle-xl/config.yml
@@ -111,6 +111,11 @@ scripts:
     output_file: gas_masses.png
     section: Histograms
     title: Gas Particle Masses
+  - filename: scripts/gas_smoothing_lengths.py
+    caption: Gas Particle Comoving Smoothing Lengths with the minimal smoothing length indicated by the vertical dashed line.
+    output_file: gas_smoothing_lengths.png
+    section: Histograms
+    title: Gas Particle Smoothing Lengths
   - filename: scripts/max_temperatures.py
     caption: Maximal temperature recorded by gas particles throughout the entire simulation.
     output_file: gas_max_temperatures.png
